[tool.poetry]
name = "goszakupparser"
version = "0.1.0"
description = ""
authors = ["valhallajazzy <valhallajazzy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
xmltodict = "^0.13.0"
lxml = "^5.1.0"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
